Eddited error page

--- a/Experiment_Plots.ipynb
+++ b/Experiment_Plots.ipynb
@@ -9,7 +9,9 @@
     "# Importing libraries\n",
     "from web3 import Web3\n",
     "import json\n",
-    "import ast"
+    "import ast\n",
+    "import names\n",
+    "import random"
    ]
   },
   {
@@ -22,11 +24,11 @@
      "output_type": "stream",
      "text": [
       "isConnected: True\n",
-      "0xACEadb1a4FB79A25635AEf6466d3D9A8b579cF45\n",
-      "0x69aCcccC9857085ab304aa90268e4c9Bf298b85A\n",
-      "0x94A8cE7D77F6eef80248Ea624c7B673A8c4200A7\n",
-      "0xB683E8b9d023b0D4F3C7020A84Ba041aBD7A57AD\n",
-      "0x3CDAFf98400617A75B930C510559F831292cf58a\n"
+      "0x643dB7dAdaE70FAB144c66f8ceAD5C92e9a0e930\n",
+      "0xF39C678F0B26cF6a4AC445fbE3F6e6cd56C7634e\n",
+      "0xf94bFC98712902E5Bea46F82D50fa832D73E592C\n",
+      "0x78212f69AaCc102534B865d61E011691C779c7Bd\n",
+      "0x23A71f59663cD651de3b10ac128eDB7fC7e1fa07\n"
      ]
     }
    ],
@@ -51,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ministry Manufacturer: 0xACEadb1a4FB79A25635AEf6466d3D9A8b579cF45\n"
+      "Ministry Manufacturer: 0x643dB7dAdaE70FAB144c66f8ceAD5C92e9a0e930\n"
      ]
     }
    ],
@@ -70,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hospital_one: 0x69aCcccC9857085ab304aa90268e4c9Bf298b85A\n"
+      "hospital_one: 0xF39C678F0B26cF6a4AC445fbE3F6e6cd56C7634e\n"
      ]
     }
    ],
@@ -89,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hospital_one: 0x94A8cE7D77F6eef80248Ea624c7B673A8c4200A7\n"
+      "hospital_one: 0xf94bFC98712902E5Bea46F82D50fa832D73E592C\n"
      ]
     }
    ],
@@ -103,6 +105,49 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hospital_one: 0x78212f69AaCc102534B865d61E011691C779c7Bd\n"
+     ]
+    }
+   ],
+   "source": [
+    "hospital_three = accounts_list[3]\n",
+    "print(\"hospital_one:\",hospital_three)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hospital_one: 0x23A71f59663cD651de3b10ac128eDB7fC7e1fa07\n"
+     ]
+    }
+   ],
+   "source": [
+    "hospital_four = accounts_list[4]\n",
+    "print(\"hospital_one:\",hospital_four)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#taking contract instance:\n",
@@ -112,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Registering 4 hospitals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0xa804f207a70fd5765c39e3878f1e7aad0ce2e00fead38d04679401513ee366d4\n"
+      "0x34ce208e54ad29a1750c3c853c79061677a67630eeb5c9417d15e23918e1e9cb\n"
      ]
     }
    ],
@@ -144,65 +198,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0x4c435a68db240b36ae69048ef93086d88e527e4c098604142b26be694c8e59f8\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    _ = contract.functions.registerHospital('Hospital_2',hospital_two,'SputnikV',True).transact({'from':ministry_address})\n",
-    "    print(_.hex())\n",
-    "except ValueError as e:\n",
-    "    print(ast.literal_eval(str(e))['message'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0x8711a2bbf633bc0870f9c3818ecf7c0b51f9abbc16a14430071dead33fe248af\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Making Vaccination \n",
-    "\n",
-    "_ = contract.functions.VaccinatePeople('Yash').transact({'from':hospital_one})\n",
-    "print(_.hex())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0x07ec783d4fabb63899c8179d3e1a57008673ef0cb9d34254d20d71bf47383325\n"
-     ]
-    }
-   ],
-   "source": [
-    "_ = contract.functions.VaccinatePeople('Olga').transact({'from':hospital_one})\n",
-    "print(_.hex())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -210,13 +205,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x57d69f06db43c07ea81dcf289ffe1567a88b2b49f883859f51c38ae3b04cc8a9\n"
+      "0x16836f6f3b1e39dd747d429374473d7359300822b5f07d1a7239f0cf50bdb451\n"
      ]
     }
    ],
    "source": [
-    "_ = contract.functions.VaccinatePeople('Vansh').transact({'from':hospital_one})\n",
-    "print(_.hex())"
+    "try:\n",
+    "    _ = contract.functions.registerHospital('Hospital_2',hospital_two,'Pfizer',True).transact({'from':ministry_address})\n",
+    "    print(_.hex())\n",
+    "except ValueError as e:\n",
+    "    print(ast.literal_eval(str(e))['message'])"
    ]
   },
   {
@@ -228,13 +226,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "0xfe4c9dded5caef1940a98179c045ba335c50628acd10fbc6ccaaa2a1cc7c443c\n"
      ]
     }
    ],
    "source": [
-    "# checking certificate count\n",
-    "print(contract.functions.vaccineCard().call() - 1) # We do -1 just to see how many done."
+    "try:\n",
+    "    _ = contract.functions.registerHospital('Hospital_3',hospital_three,'SputnikLite',True).transact({'from':ministry_address})\n",
+    "    print(_.hex())\n",
+    "except ValueError as e:\n",
+    "    print(ast.literal_eval(str(e))['message'])"
    ]
   },
   {
@@ -246,30 +247,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 'Yash', 1627901260, 1, 'Hospital_1', '0x69aCcccC9857085ab304aa90268e4c9Bf298b85A', 'SputnikV']\n"
+      "0x774e608c9a619d885287107458fb63f6c97a52b60cc79b80f90067dc47086e4e\n"
      ]
     }
    ],
    "source": [
-    "# Checking certificate number\n",
-    "print(contract.functions.PublicBook(1).call())"
+    "try:\n",
+    "    _ = contract.functions.registerHospital('Hospital_4',hospital_four,'Moderna',True).transact({'from':ministry_address})\n",
+    "    print(_.hex())\n",
+    "except ValueError as e:\n",
+    "    print(ast.literal_eval(str(e))['message'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 'Olga', 1627901260, 1, 'Hospital_1', '0x69aCcccC9857085ab304aa90268e4c9Bf298b85A', 'SputnikV']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(contract.functions.PublicBook(2).call())"
+    "#Making Vaccination from random hospital with random names:\n",
+    "for i in range(1000):\n",
+    "    contract.functions.VaccinatePeople(names.get_full_name()).transact({'from':accounts_list[random.randint(1, 4)]})"
    ]
   },
   {
@@ -281,12 +279,196 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 'Vansh', 1627901260, 1, 'Hospital_1', '0x69aCcccC9857085ab304aa90268e4c9Bf298b85A', 'SputnikV']\n"
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking certificate count\n",
+    "print(contract.functions.vaccineCard().call() - 1) # We do -1 just to see how many done."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'Cheryl Casteel', 1628169348, 3, 'Hospital_3', '0x78212f69AaCc102534B865d61E011691C779c7Bd', 'SputnikLite']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking certificate number\n",
+    "print(contract.functions.PublicBook(1).call())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 'Carlos Trippel', 1628169348, 1, 'Hospital_1', '0xF39C678F0B26cF6a4AC445fbE3F6e6cd56C7634e', 'SputnikV']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(contract.functions.PublicBook(2).call())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 'Hester Charron', 1628169348, 3, 'Hospital_3', '0x78212f69AaCc102534B865d61E011691C779c7Bd', 'SputnikLite']\n"
      ]
     }
    ],
    "source": [
     "print(contract.functions.PublicBook(3).call())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erin Lasalle\n",
+      "Anne Bartlett\n",
+      "Rick Dunn\n",
+      "Freddie Cole\n",
+      "Juana Hoffman\n",
+      "Peter Nelson\n",
+      "William Garcia\n",
+      "Susan Coronado\n",
+      "Rodney Monroe\n",
+      "Jose Davis\n",
+      "Rosa Nunez\n",
+      "Eric Tiano\n",
+      "Angelique Nguyen\n",
+      "James Simmons\n",
+      "Erik Engemann\n",
+      "Kevin Marsh\n",
+      "Dale Harrison\n",
+      "Cody Drake\n",
+      "May Higa\n",
+      "Elizabeth Norris\n",
+      "Blanche Cassidy\n",
+      "Victor Minjarez\n",
+      "Angelia Slape\n",
+      "Judith Poulsen\n",
+      "Roger Mason\n",
+      "Kimberly Foster\n",
+      "Deborah Martinez\n",
+      "Jeffrey Robertson\n",
+      "Arnold Stein\n",
+      "Jeffery White\n",
+      "Ann Zamora\n",
+      "Cortney Houston\n",
+      "Marilyn Ezell\n",
+      "Lesley Adams\n",
+      "Regina Melton\n",
+      "Robert Pepper\n",
+      "Patrick Lorona\n",
+      "Linda Blair\n",
+      "Tina Peltier\n",
+      "Annie Sadler\n",
+      "Cindy Campbell\n",
+      "Mary Nye\n",
+      "Mark Rice\n",
+      "Jacqueline Crandall\n",
+      "Karen Mathews\n",
+      "Michael Friscia\n",
+      "Mary Moreau\n",
+      "Ryan Pharr\n",
+      "Lee Howard\n",
+      "Julio Freeman\n",
+      "Paul Stuckey\n",
+      "Michael Mcclelland\n",
+      "Carl Dunigan\n",
+      "Allen Sinclair\n",
+      "Maryann Caraway\n",
+      "Andre Holman\n",
+      "Jeffry Murders\n",
+      "Anthony Shelley\n",
+      "Harry Sheridan\n",
+      "Don Tabron\n",
+      "Laura Powell\n",
+      "James Wilson\n",
+      "Ann Roth\n",
+      "Mark Webb\n",
+      "Magdalena Beckwith\n",
+      "Amanda Nugent\n",
+      "Randall Trappey\n",
+      "Marilyn Delmoro\n",
+      "William Adams\n",
+      "William Delapena\n",
+      "Todd Vitale\n",
+      "Margaret Austin\n",
+      "Carol Suddreth\n",
+      "Reynaldo Lee\n",
+      "Mary Reynolds\n",
+      "Paul Kyser\n",
+      "Timothy Love\n",
+      "Marie Schaal\n",
+      "Keisha Spivey\n",
+      "Jamie Schweinfurth\n",
+      "Lois Josey\n",
+      "Charlotte Church\n",
+      "Imogene Franco\n",
+      "Hubert Tegeler\n",
+      "Ann Adams\n",
+      "Jenny Socha\n",
+      "Andres Walker\n",
+      "Alline Bumpus\n",
+      "Carlos Mccoy\n",
+      "Robert Schultz\n",
+      "Phyllis Rowland\n",
+      "Kent Robinson\n",
+      "Clark Harris\n",
+      "Beatrice Gordo\n",
+      "Jack Longino\n",
+      "Allan Glover\n",
+      "Nicholas Ogle\n",
+      "Lisa Doss\n",
+      "Minerva Herstad\n",
+      "Louis Austin\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100):\n",
+    "    print(names.get_full_name())"
    ]
   },
   {
